# openafc

./: .clang-format  .dockerignore  .env  .gitignore  CMakeLists.txt  CPPLINT.cfg  Customization.md  Dockerfile  Dockerfile-for-build  Dockerfile.deprecated  Doxyfile.in  Jenkinsfile  Jenkinsfile-rpm  LICENSE.txt  NewUserRegistration.md  OIDC_Login.md  PrivateContent.md  README.md  ReleaseNote.md  ReleaseNotes_3.3.10.md  TestDemoUser.Readme.md  TrialUser.Readme.md  afc_bashrc_dev  build-rpm.sh  ca-bundle.crt  dailyulsscript_readme.md  database_readme.md  docker-compose.yaml  docker-compose.yml  docker-entrypoint.sh  fbrat.rpmlintrc  pylintrc  remote_copy.pl  rlanafc.pro  run_rlanafc.pl  run_test.sh  runcmd.py  svnrevision.txt  version.txt
pkg/: CMakeLists.txt  fbrat.spec.in  fbratConfig.cmake.in  fbratConfigVersion.cmake.in
src/: .gitignore  CMakeLists.txt  README-IndoorCertification.md  README-IndoorFlag.md  README.md
src/afc-engine/: AfcDefinitions.h  AfcManager.cpp  AfcManager.h  BuildingRasterModel.cpp  BuildingRasterModel.h  CMakeLists.txt  CachedGdal.cpp  CachedGdal.h  DEPDataset.cpp  DEPDataset.h  EcefModel.cpp  EcefModel.h  ErrorTypes.h  GdalDataDir.cpp  GdalDataDir.h  GdalDataModel.cpp  GdalDataModel.h  GdalHelpers.cpp  GdalHelpers.h  GdalImageFile.cpp  GdalImageFile.h  GdalImageFile2.cpp  GdalImageFile2.h  GdalImageMap.cpp  GdalImageMap.h  GdalNameMapper.cpp  GdalNameMapper.h  GdalTransform.cpp  GdalTransform.h  GeodeticConstellation.h  GeodeticCoord.cpp  GeodeticCoord.h  ITMDLL.cpp  ITMDLL.h  LruValueCache.h  MathConstants.cpp  MathConstants.h  MathHelpers.cpp  MathHelpers.h  MultiGeometryIterable.h  (+65 more)
src/afc-engine-preload/: Makefile  README.md  aep.cpp  parse_fs.py
src/afc-engine/test/: CMakeLists.txt  TestBuildingPenetration.cpp  TestEndToEnd.cpp  TestITUData.cpp  expected_output_test1.json  expected_output_test2.json  expected_output_test3.json  expected_output_test4.json  expected_output_test5.json  expected_output_test6.json
src/afc-packages/: pkgs.afc_server  pkgs.als_siphon  pkgs.cert_db  pkgs.dispatcher  pkgs.filestorage  pkgs.grafana  pkgs.msghnd  pkgs.objstorage  pkgs.rat_server  pkgs.rcache  pkgs.uls  pkgs.worker
src/afc-packages/afcdefs/: setup.py
src/afc-packages/afcmodels/: setup.py
src/afc-packages/afcobjst/: setup.py
src/afc-packages/afctask/: afctask.py  setup.py
src/afc-packages/afcworker/: afc_worker.py  setup.py
src/afc-packages/als/: als.py  setup.py
src/afc-packages/appconfig/: appcfg.py  setup.py
src/afc-packages/db_utils/: db_creator.py  db_utils.py  setup.py
src/afc-packages/defs/: defs.py  setup.py
src/afc-packages/fstorage/: fst.py  setup.py
src/afc-packages/healthchecks/: hchecks.py  setup.py
src/afc-packages/netcli/: ncli.py  setup.py
src/afc-packages/prometheus_utils/: afc_traffic_metrics.py  prometheus_utils.py  setup.py
src/afc-packages/pydantic_utils/: pydantic_utils.py  setup.py
src/afc-packages/rcache/: log_utils.py  rcache_client.py  rcache_common.py  rcache_db.py  rcache_models.py  rcache_rcache.py  rcache_req_cfg_hash.py  rcache_rmq.py  setup.py
src/afc-packages/secret_utils/: secret_utils.py  setup.py
src/afclogging/: CMakeLists.txt  ErrStream.cpp  ErrStream.h  Logging.cpp  Logging.h  LoggingConfig.cpp  LoggingConfig.h  LoggingScopedSink.cpp  LoggingScopedSink.h  LoggingSeverityLevel.h  QtStream.cpp  QtStream.h
src/afclogging/test/: TestLogging.cpp  (+1 more)
src/afcsql/: CMakeLists.txt  SqlConnectionDefinition.cpp  SqlConnectionDefinition.h  SqlDelete.cpp  SqlDelete.h  SqlError.cpp  SqlError.h  SqlExceptionDb.cpp  SqlExceptionDb.h  SqlHelpers.cpp  SqlHelpers.h  SqlInsert.cpp  SqlInsert.h  SqlPreparedQuery.cpp  SqlPreparedQuery.h  SqlScopedConnection.cpp  SqlScopedConnection.h  SqlSelect.cpp  SqlSelect.h  SqlTable.cpp  SqlTable.h  SqlTransaction.cpp  SqlTransaction.h  SqlUpdate.cpp  SqlUpdate.h  SqlValueMap.cpp  SqlValueMap.h
src/als/: ALS.sql  Dockerfile.kafka  Dockerfile.postgres  Dockerfile.siphon  README.md  als_query.py  als_siphon.py  requirements.txt
src/coalition_ulsprocessor/: CMakeLists.txt  build.bat  build.sh  flowchart.txt
src/filestorage/: Dockerfile  README.md  __init__.py  docker-entrypoint.sh  filestorage.py  filestorage_config.py  history.py  objstconf.py  requirements.txt
src/ratapi/: CMakeLists.txt  setup.py.in
src/ratcommon/: CMakeLists.txt  CsvReader.cpp  CsvReader.h  CsvWriter.cpp  CsvWriter.h  EnvironmentFlag.cpp  EnvironmentFlag.h  ExceptionSafeCoreApp.cpp  ExceptionSafeCoreApp.h  FileHelpers.cpp  FileHelpers.h  GzipCsv.cpp  GzipCsv.h  GzipStream.cpp  GzipStream.h  PostSet.cpp  PostSet.h  RatVersion.cpp.in  RatVersion.h.in  SearchPaths.cpp  SearchPaths.h  TestEnvironmentFlag.cpp  TextHelpers.cpp  TextHelpers.h  ZipWriter.cpp  ZipWriter.h  overload_cast.h
src/rattestcommon/: FileTestHelpers.cpp  FileTestHelpers.h
src/rkflogging/: CMakeLists.txt  ErrStream.cpp  ErrStream.h  Logging.cpp  Logging.h  LoggingConfig.cpp  LoggingConfig.h  LoggingScopedSink.cpp  LoggingScopedSink.h  LoggingSeverityLevel.h  QtStream.cpp  QtStream.h
src/rkfsql/: CMakeLists.txt  SqlConnectionDefinition.cpp  SqlConnectionDefinition.h  SqlDelete.cpp  SqlDelete.h  SqlError.cpp  SqlError.h  SqlExceptionDb.cpp  SqlExceptionDb.h  SqlHelpers.cpp  SqlHelpers.h  SqlInsert.cpp  SqlInsert.h  SqlPreparedQuery.cpp  SqlPreparedQuery.h  SqlScopedConnection.cpp  SqlScopedConnection.h  SqlSelect.cpp  SqlSelect.h  SqlTable.cpp  SqlTable.h  SqlTransaction.cpp  SqlTransaction.h  SqlUpdate.cpp  SqlUpdate.h  SqlValueMap.cpp  SqlValueMap.h
src/rkfunittest/: CMakeLists.txt  ErrorStats.h  FileTestHelpers.cpp  FileTestHelpers.h  GtestShim.cpp  GtestShim.h  LogCollector.cpp  LogCollector.h  PgsqlDaemonRunner.cpp  PgsqlDaemonRunner.h  ProgRunner.cpp  ProgRunner.h  QuantityNear.h  SignalWaiter.cpp  SignalWaiter.h  UnitTestCoreApp.cpp  UnitTestCoreApp.h  UnitTestHelpers.cpp  UnitTestHelpers.h
src/ulstool/: Dockerfile  requirements.txt  uls_tool.md  uls_tool.py
src/web/: CMakeLists.txt  LICENSE  README.md  jest.config.js  package.json  tsconfig.json  tslint.json  webpack.common.in  webpack.dev.in  webpack.prod.in
(+917 files in other folders)
